# walrus

./: Cargo.toml  Dockerfile  Makefile  README.md  build.rs
helm/walrus/: Chart.yaml  values.yaml
helm/walrus/templates/: _helpers.tpl  service.yaml  serviceaccount.yaml  statefulset.yaml
src/: lib.rs  main.rs
src/api/v1/: log.proto
src/client/: grpc.rs  service.rs
src/cluster/: config.rs  discovery.rs  election.rs  mod.rs  replication.rs  state.rs
src/log/: config.rs  index.rs  log.rs  mod.rs  segment.rs  store.rs
src/server/: grpc.rs  mod.rs  server.rs  service.rs
tests/: distributed_test.rs  log_test.rs  store_test.rs  wal_test.rs
