[package]
name = "walrus"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
byteorder = "1.5.0"
memmap = "0.7.0"
memmap2 = "0.9.5"
prost = "0.13.5"
prost-types = "0.13.5"
protobuf = "3.7.2"
protobuf-codegen = "3.7.2"
tonic = "0.13.1"


[build-dependencies]
prost = "0.13.5"
prost-types = "0.13.5"
protobuf-codegen = "3.7.2"
prost-build = "0.13.5"
tonic-build = "0.13.1"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "walrus"

[dev-dependencies]
tempfile = "3.19.1"



