[package]
name = "walrus"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
byteorder = "1.5.0"
memmap = "0.7.0"
memmap2 = "0.9.5"
prost = "0.13.5"
prost-types = "0.13.5"
protobuf = "3.7.2"
protobuf-codegen = "3.7.2"
tonic = "0.13.1"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
async-trait = "0.1"
dashmap = "5.0"
rand = "0.8"
thiserror = "1.0"
clap = { version = "4.0", features = ["derive"] }
config = "0.13"
base64 = "0.21"
hex = "0.4"

[build-dependencies]
prost = "0.13.5"
prost-types = "0.13.5"
protobuf-codegen = "3.7.2"
prost-build = "0.13.5"
tonic-build = "0.13.1"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "walrus"

[dev-dependencies]
tempfile = "3.19.1"



